modificacion recuadro de proyectos

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     secundario y Primario del sistema educativo provincial.
                   </div>
                   <div class="modal-footer bg-dark">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                   </div>
                 </div>
               </div>
@@ -247,7 +247,7 @@
                     </h5>
                   </div>
                   <div class="modal-footer bg-dark">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                   </div>
                 </div>
               </div>
@@ -261,7 +261,7 @@
       <h3>Proyectos Personales de Indole Educativo</h3>
       <!---------------------- ----------------Imagenes-------------------- -->
       <div class="wrap" id="Proyectos">
-        <div class="galeria">
+        <div  id="VB" class="galeria">
           <div class="imagen elemento2" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Practica React">
             <a href="https://github.com/LopezJuanAndres/tecnicos-react/tree/master"><img src="imagenes/react.png"
                 alt=""> </a>
@@ -273,8 +273,7 @@
           </div>
           <div class="imagen elemento4" data-bs-toggle="tooltip" data-bs-placement="bottom"
             title="Gestor asistencia - Visual Basic Access">
-            <a href="https://github.com/LopezJuanAndres/VisualBasic-Access/tree/main"><img id="VB"
-                src="imagenes/vBasic.png" alt=""></a>
+            <a href="https://github.com/LopezJuanAndres/VisualBasic-Access/tree/main"><img  src="imagenes/vBasic.png" alt=""></a>
           </div>
           <div class="imagen elemento5" data-bs-toggle="tooltip" data-bs-placement="bottom"
             title="Login Basico MVC (Java-MySql)">
@@ -282,7 +281,6 @@
           </div>
         </div>
       </div>
-
     </section>
 
     <!---------------------- seccion de contacto-------------------- -->
