modificacion seccion  experiencia Laboral

--- a/index.html
+++ b/index.html
@@ -195,10 +195,11 @@
       <!---------------------- ----------------Imagenes-------------------- -->
       <div class="wrap">
         <div class="galeria">
-          <div class="imagen elemento2">
+          <div class="imagen elemento2" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Reemplazante Docente">
+            <h1>Reemplazante Docente</h1>
             <!-- Button trigger modal -->
             <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#Docente">
-              <img src="imagenes/profesor-hombre-aula_.avif" alt="">
+            <img src="imagenes/profesor-hombre-aula_.avif" alt=""> 
             </button>
             <!-- Modal -->
             <div class="modal fade " id="Docente" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -221,7 +222,8 @@
               </div>
             </div>
           </div>
-          <div class="imagen elemento3">
+          <div class="imagen elemento3" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Soporte Técnico Nivel 2">
+            <h1>Soporte Técnico Nivel 2</h1>
             <!-- Button trigger modal -->
             <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#Soporte">
               <img src="imagenes/concepto-soporte-tecnico_1284-14631.avif" alt="">
