modificacion modal de experiencia

--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
                   <div class="modal-body bg-dark">
-                    Realice y realizo reemplazos varios en instituciones Educativas de indole Públicas y
+                    <h4>  Realice y realizo reemplazos varios en instituciones Educativas de indole Públicas y
                     Privadas, dictando clases de las materias Programación , Logica y Estructura de Datos ,Educación
                     Tecnológica ,entre otras.Actualmente cuento con 11 meses de antigüedad docente en el Nivel
-                    secundario y Primario del sistema educativo provincial.
+                    secundario y Primario del sistema educativo provincial. </h4>
                   </div>
                   <div class="modal-footer bg-dark">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
@@ -237,7 +237,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
                   <div class="modal-body bg-dark">
-                    <h5>Como Asistente Tecnico en la empresa Conmega ACE brinde soporte técnico a clientes internos de
+                    <h4>Como Asistente Tecnico en la empresa Conmega ACE brinde soporte técnico a clientes internos de
                       la Firma Musimundo y Crédito Argentino. <br>
                       Entre las funciones principales y mas destacadas se encuentran las siguientes : <br>
                       -Instalacion y Configuracion de Sistemas Operativos en Pc de Escritorios y Notebook.<br>
@@ -246,7 +246,7 @@
                       - Instalacion y mantenimiento de Drivers<br>
                       - Instalacion y Configuraciones de Terminales Poi (Lapos-Posnet).<br>
                       - Limpieza y Mantenimiento de Pc de Escritorio Y Notebook(Varios Modelos y Marcas)<br>
-                    </h5>
+                    </h4>
                   </div>
                   <div class="modal-footer bg-dark">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
