--- a/index.html
+++ b/index.html
@@ -189,75 +189,7 @@
       </div>
     </Section>
 
-    <!---------------------- seccion Experiencia Laboral-------------------- -->
-    <Section id="Experiencia">
-      <h3>Experiencia Laboral</h3>
-      <!---------------------- ----------------Imagenes-------------------- -->
-      <div class="wrap">
-        <div class="galeria">
-          <div class="imagen elemento2" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Reemplazante Docente">
-            <h1>Reemplazante Docente</h1>
-            <!-- Button trigger modal -->
-            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#Docente">
-            <img src="imagenes/profesor-hombre-aula_.avif" alt=""> 
-            </button>
-            <!-- Modal -->
-            <div class="modal fade " id="Docente" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-              <div class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header bg-dark">
-                    <h5 class="modal-title " id="exampleModalLabel">Docente</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                  </div>
-                  <div class="modal-body bg-dark">
-                    <h4>  Realice y realizo reemplazos varios en instituciones Educativas de indole Públicas y
-                    Privadas, dictando clases de las materias Programación , Logica y Estructura de Datos ,Educación
-                    Tecnológica ,entre otras.Actualmente cuento con 11 meses de antigüedad docente en el Nivel
-                    secundario y Primario del sistema educativo provincial. </h4>
-                  </div>
-                  <div class="modal-footer bg-dark">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="imagen elemento3" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Soporte Técnico Nivel 2">
-            <h1>Soporte Técnico Nivel 2</h1>
-            <!-- Button trigger modal -->
-            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#Soporte">
-              <img src="imagenes/concepto-soporte-tecnico_1284-14631.avif" alt="">
-            </button>
-            <!-- Modal -->
-            <div class="modal fade " id="Soporte" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-              <div class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header bg-dark">
-                    <h5 class="modal-title " id="exampleModalLabel">Soporte Técnico Nivel 2 </h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                  </div>
-                  <div class="modal-body bg-dark">
-                    <h4>Como Asistente Tecnico en la empresa Conmega ACE brinde soporte técnico a clientes internos de
-                      la Firma Musimundo y Crédito Argentino. <br>
-                      Entre las funciones principales y mas destacadas se encuentran las siguientes : <br>
-                      -Instalacion y Configuracion de Sistemas Operativos en Pc de Escritorios y Notebook.<br>
-                      - Instalacion y Configuracion de Software varios<br>
-                      - Limpieza y Reparacion de Impresoras Laser<br>
-                      - Instalacion y mantenimiento de Drivers<br>
-                      - Instalacion y Configuraciones de Terminales Poi (Lapos-Posnet).<br>
-                      - Limpieza y Mantenimiento de Pc de Escritorio Y Notebook(Varios Modelos y Marcas)<br>
-                    </h4>
-                  </div>
-                  <div class="modal-footer bg-dark">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+    
     <!---------------------- seccion Practicas Educativas-------------------- -->
     <Section>
       <h3>Proyectos Personales de Indole Educativo</h3>
@@ -284,7 +216,75 @@
         </div>
       </div>
     </section>
-
+<!---------------------- seccion Experiencia Laboral-------------------- -->
+<Section id="Experiencia">
+  <h3>Experiencia Laboral</h3>
+  <!---------------------- ----------------Imagenes-------------------- -->
+  <div class="wrap">
+    <div class="galeria">
+      <div class="imagen elemento2" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Reemplazante Docente">
+        <h1>Reemplazante Docente</h1>
+        <!-- Button trigger modal -->
+        <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#Docente">
+        <img src="imagenes/profesor-hombre-aula_.avif" alt=""> 
+        </button>
+        <!-- Modal -->
+        <div class="modal fade " id="Docente" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header bg-dark">
+                <h5 class="modal-title " id="exampleModalLabel">Docente</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body bg-dark">
+                <h3>  Desempeño de reemplazos varios en instituciones Educativas de indole Públicas y
+                Privadas, dictando clases de las materias Programación , Logica y Estructura de Datos ,Educación
+                Tecnológica ,entre otras.Actualmente cuento con 11 meses de antigüedad docente en el Nivel
+                secundario y Primario del sistema educativo provincial. </h3>
+              </div>
+              <div class="modal-footer bg-dark">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="imagen elemento3" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Soporte Técnico Nivel 2">
+        <h1>Soporte Técnico Nivel 2</h1>
+        <!-- Button trigger modal -->
+        <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#Soporte">
+          <img src="imagenes/concepto-soporte-tecnico_1284-14631.avif" alt="">
+        </button>
+        <!-- Modal -->
+        <div class="modal fade " id="Soporte" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header bg-dark">
+                <h5 class="modal-title " id="exampleModalLabel">Soporte Técnico Nivel 2 </h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body bg-dark">
+                <h3>Como Asistente Tecnico en la empresa Conmega ACE brinde soporte técnico a clientes internos de
+                  la Firma Musimundo y Crédito Argentino. <br>
+                  Entre las funciones principales y mas destacadas se encuentran las siguientes : <br>
+                  -Instalacion y Configuracion de Sistemas Operativos en Pc de Escritorios y Notebook.<br>
+                  - Instalacion y Configuracion de Software varios<br>
+                  - Limpieza y Reparacion de Impresoras Laser<br>
+                  - Instalacion y mantenimiento de Drivers<br>
+                  - Instalacion y Configuraciones de Terminales Poi (Lapos-Posnet).<br>
+                  - Limpieza y Mantenimiento de Pc de Escritorio Y Notebook(Varios Modelos y Marcas)<br>
+                </h3>
+              </div>
+              <div class="modal-footer bg-dark">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
     <!---------------------- seccion de contacto-------------------- -->
     <Section class="container-sm" id="Contacto">
       <h3>Informacion de contacto</h3>
