--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <!--imagen de perfil------------------------------------------->
         <div class="card-header row">
           <div id="FPerfil" class="col-4 ">
-            <img src="imagenes/Perfil2023.jpg" class="img-thumbnail" alt="Foto de Perfil">
+            <img src="imagenes/Perfil 2025.jpg" class="img-thumbnail" alt="Foto de Perfil">
           </div>
           <h1 class="col-8">Técnico Superior en Desarrollo de Software </h1><br>
           <!-- <span id="edad"></span> años <br>-->
@@ -188,18 +188,13 @@
         </div>
       </div>
     </Section>
-
     
     <!---------------------- seccion Practicas Educativas-------------------- -->
     <Section>
       <h3>Proyectos Personales de Indole Educativo</h3>
       <!---------------------- ----------------Imagenes-------------------- -->
       <div class="wrap" id="Proyectos">
-        <div  id="VB" class="galeria">
-          <div class="imagen elemento2" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Practica React">
-            <a href="https://github.com/LopezJuanAndres/tecnicos-react/tree/master"><img src="imagenes/react.png"
-                alt=""> </a>
-          </div>
+        <div  id="VB" class="galeria">          
           <div class="imagen elemento3" data-bs-toggle="tooltip" data-bs-placement="bottom"
             title="Gestor Asistencia (PHP-Jquery-Ajax)">
             <a href="https://github.com/LopezJuanAndres/Sistema-Web/tree/main"><img src="imagenes/html-php-.png"
@@ -253,7 +248,7 @@
         <h1>Soporte Técnico Nivel 2</h1>
         <!-- Button trigger modal -->
         <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#Soporte">
-          <img src="imagenes/concepto-soporte-tecnico_1284-14631.avif" alt="">
+          <img src="imagenes/soporte-tecnico.jpg" alt="">
         </button>
         <!-- Modal -->
         <div class="modal fade " id="Soporte" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
