quite certificados pdf

--- a/index.html
+++ b/index.html
@@ -161,36 +161,13 @@
               </div>
             </div>
           </div>
-          <div class="imagen elemento8"> <!-- Button trigger modal -->
-            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#Titulos">
-              <img src="imagenes/Certificados.jpg" alt="">
-            </button>
-            <!-- Modal -->
-            <div class="modal fade " id="Titulos" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-              <div class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header bg-dark">
-                    <h5 class="modal-title " id="exampleModalLabel"> Titulos </h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                  </div>
-                  <div class="modal-body bg-dark">
-                    <embed src="Pdf/Certificados de Estudios.pdf " type="application/pdf" width="100%" height="500px" />
-                    <embed src="Pdf/Desarrollador_PHP.pdf" type="application/pdf" width="100%" height="450px"/>
-                    <embed src="Pdf/Argentina-programa1.pdf " type="application/pdf" width="100%" height="400px" />
-                  </div>
-                  <div class="modal-footer bg-dark">
-                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+          
         </div>
       </div>
     </Section>
     
     <!---------------------- seccion Practicas Educativas-------------------- -->
-    <Section>
+    <Section id="Proyectos">
       <h3>Proyectos Personales de Indole Educativo</h3>
       <!---------------------- ----------------Imagenes-------------------- -->
       <div class="wrap" id="Proyectos">
