--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <!---------------------- seccion de Certificados y estudios --------------------------------------------- -->
     <Section id="titulos">
-      <h3>Titulos Y Certificados</h3>
+      <h3>Educación</h3>
       <div class="wrap">
         <div class="galeria">
           <div class="imagen elemento5">
