--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         <section class="social">
           <a href="https://github.com/LopezJuanAndres" target="_blank">GitHub</a> |
           <a href="https://www.linkedin.com/in/juan-andres-lopez-55b243203" target="_blank">LinkedIn</a>
+          <a href="https://www.instagram.com/jalopez.informatica/" target="_blank">
+            <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram" width="30"/></a>
         </section>
         
         <footer>
